Widening main menu children (new issue, etc) so hungarian labels won't wrap

--- a/src/sass/components/_top.scss
+++ b/src/sass/components/_top.scss
@@ -324,7 +324,7 @@
     .menu-children {
         display: none;
         position: absolute;
-        min-width: 130px;
+        min-width: 150px;
         margin: 0 1px;
         padding: 0;
         border-radius: 0 0 $border-radius-base $border-radius-base;
